# automations

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
app/: __init__.py  main.py
app/cli/: __init__.py  create_admin.py  create_client.py  jwt_keygen.py  keygen.py  msal_device_login.py  msal_device_playwright.py  open_webpage.py  scrape_site.py  utils.py
app/core/: __init__.py  auth.py  browser.py  config.py  json_utils.py  logging.py  scraping.py  security.py
app/db/: __init__.py  base.py  init_db.py  models.py
app/routers/: auth.py  browser.py  me.py  power_automate.py  power_bi.py  powerbi.py  reports.py  scraping.py  users.py
app/schemas/: __init__.py  auth.py  browser.py  client.py  power_automate.py  power_bi.py  powerbi.py  scraping.py  user.py
app/scraping/: __init__.py  helpers.py  recipes.py
app/services/: __init__.py  duckdb_stub.py  microsoft_auth.py  msal_device.py  msal_playwright.py  power_automate.py  power_bi.py  power_bi_storage.py  scraping_executor.py
app/setup/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_auth_client.py  test_auth_password.py  test_browser_router.py  test_cli_admin.py  test_config_scopes.py  test_core_browser.py  test_core_json_utils.py  test_microsoft_auth_service.py  test_power_automate_router.py  test_power_bi_router.py  test_powerbi_device_flow.py  test_powerbi_router.py  test_scraping_execution.py  test_scraping_helpers.py  test_scraping_router.py  test_scraping_targets.py  test_security.py  test_setup_client_credentials.py  test_users_self_service.py
